--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,7 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+
+# Visual Studio 2015 Update 1 New Database
+*.db
+*.opendb
